<resources>
    <string name="app_name">옷고리즘</string>
    <string name="server_root_address">http://13.124.3.73</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <!--
    <string name="navigation_drawer_open">Open navigation menu_navigation</string>
    <string name="navigation_drawer_close">Close navigation menu_navigation</string>
-->
    <!-- in SignInActivity -->
    <string name="forgotten_password"><u>비밀번호를 잊으셨나요?</u></string>
    <string name="to_sign_up"><u>회원가입</u></string>

    <string name="sign_in_description">다양한 서비스를 옷고리즘과\n함께 이용하실 수 있어요!</string>
    <string name="add_desc">옷고리즘을 보다 원활하게 이용하기 위함이에요!\n나중에 정보를 수정할 수 있습니다.</string>

    <!-- 프로젝트에서 필요한 문자열들을 정의 -->
    <!--<string name="nav_item_closet">내 옷장</string>-->
    <string name="nav_item_letterbox">나의 서신함</string>
    <string name="nav_item_favorites">즐겨찾는 장군</string>
    <string name="nav_item_collection">데일리룩 컬렉션</string>

    <!--<string name="nav_contact">이용 문의</string>-->

    <string name="nav_aboutUs">옷고리즘에 대하여</string>
    <!--<string name="nav_contact_notice">공지사항</string>-->
    <string name="nav_aboutUs_origin">옷고리즘의 기원</string>
    <string name="nav_aboutUs_notice">공지사항</string>
    <string name="nav_aboutUs_settings">설정</string>
    <string name="nav_aboutUs_logout">로그아웃</string>

    <!-- ativity_rank.xml -->
    <string name="action_search">검색</string>

    <!-- ativity_rank.xml -->
    <string name="action_chat">채팅</string>

    <!-- ativity_profile.xml -->
    <string name="card_one">카드1</string>
    <string name="card_two">카드2</string>

    <string name="action_settings">Settings</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--페북-->
    <string name="facebook_app_id">244104373080056</string>
    <string name="fb_login_protocol_scheme">fb244104373080056</string>

    <!-- Copyright by Ambitious People -->
    <string name="developer">by 야인 be amBITious</string>

    <!-- in dialog_sortie.xml -->
    <string name="sortie_title">출격 명령 서비스란?</string>

    <string name="sortie_desc">
        기상 상태와 과학적 빅데이터를 분석,\n
        당장 입을 수 있는 아이템은 출격하고\n
        무리라고 판단된다면 퇴각을 내립니다.\n
        \n
        홈페이지에서만 확인 가능했던 수고를\n
        이제는 손에 잡히는 어플로 한 번에,\n
        시각적으로 한눈에 확인하세요!
    </string>

    <!-- dialog_province.xml -->
    <string name="gallery_title">전투 상황판</string>

    <string name="gallery_desc">
        오늘 좀 스타일 괜찮은 것 같은데..\n
        누가 알아봐 줬으면 한 적이 있나요?\n
        \n
        평소보다 신경 쓴 내 모습에 만족한다면\n
        데일리룩을 소개하여 장군이 되어보세요!
    </string>

    <!-- dialog_province.xml -->
    <string name="province_title">지역 선택 안내</string>

    <string name="province_desc">
        옷 좀 입을 줄 아는 장군들은\n
        전국 각지에 포진되어 있습니다.\n
        \n
        데일리룩을 올릴 수 있는 공간인\n
        메인 화면의 전투상황 보고에서 받은\n
        Like에 따라 지역별 랭킹이 산정됩니다.\n
        \n
        자신의 구역에서 최고가 되어보세요!
    </string>

    <!-- dialog_rank.xml -->
    <string name="rank_title">장군 서열 안내</string>

    <string name="rank_desc">
        [마이 페이지] - [출격 선언]에서\n
        업로드했던 데일리룩과 닉네임,\n
        그리고 간단한 코멘트가 보여집니다.\n
        \n
        로그인 후 클릭하게 되면\n
        해당 장군으로 이동할 수 있어요.
    </string>

    <!-- Custom dialog box 2018 -->
    <string name="positive_popup_text_default">
        데일리룩이 잘 보이게 촬영해주세요.\n
        (얼굴은 나오지 않아도 괜찮아요)\n
        \n
        데일리룩과 무관하거나,\n
        불순한 의도의 사진 업로드 시
    </string>

    <string name="warning_accent">
        블라인드 및 영구 계정 정지는 물론\n
        법적 제재 대상이 될 수 있습니다.
    </string>

    <string name="positive_popup_title_default">데일리룩 업로드, 이렇게!</string>
    <string name="negative_popup_text_default">You have failed to complete the challenge. So close! Wanna have another go at it?</string>
    <string name="negative_popup_title_default">Aww... Swp!</string>

</resources>
